[package]
authors = ["golmman"]
description = "simulates game of life like cellular automatons in your terminal"
name = "termgol"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
nanorand = "0.7.0"
regex = "1.6.0"
signal-hook = "0.3.13"
termion = "1.5.6"
